Added Mongo and Elastic metrics

--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -22,3 +22,9 @@
   timeout = "5s"
   perdevice = true
   total = true
+
+[[inputs.mongodb]]
+  servers = ["mongodb://mongo:27017"]
+
+[[inputs.elasticsearch]]
+  servers = ["http://elasticsearch:9200"]
